# python_project_seed

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: pytest.yml
Tests/: test_app.py
VRP/: a.py  b.py
src/: app.py  main.py  openapi.py  optimize.py  swagger.json  type.py
src/Optimize/: __init__.py  transition_2opt.py
src/Tests/: settings.py  test_app.py  test_optimize.py
